fix: use overflow auto on #drawer-list scrollbar instead of always scroll

--- a/packages/dnb-ui-lib/src/fragments/drawer-list/style/_drawer-list.scss
+++ b/packages/dnb-ui-lib/src/fragments/drawer-list/style/_drawer-list.scss
@@ -140,7 +140,7 @@
     min-height: 2rem;
     max-height: 70vh;
 
-    @include scrollY();
+    @include scrollY(auto);
   }
   &--opened &__options {
     scroll-behavior: smooth;
